Fix: Text align gutter

--- a/__config.scss
+++ b/__config.scss
@@ -16,7 +16,8 @@ $button-font-style: normal !default;
 
 $button-transitions: true !default;
 $button-glyph: true !default;
-$button-glyph-default-position: "right" !default;
+$button-glyph-default-position: 'right' !default;
+$button-glyph-text-align: 'left' !default;
 $button-square: true !default;
 
 $button-sample: true !default;
